--- a/solving_linear_systems/0_Test_solvers.ipynb
+++ b/solving_linear_systems/0_Test_solvers.ipynb
@@ -14,16 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'solver' from '/Users/ekaterinamaksimova/IST Austria/MR_lab/random_scripts/solving_linear_systems/solver.py'>"
+       "<module 'solver' from '/Users/emaksimo/IST Austria/MR_lab/random_scripts/solving_linear_systems/solver.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,22 +67,24 @@
     "a_hat_Chol = solver.solve_linear_Cholesky(LHS=LHS, RHS=RHS)\n",
     "lasso = linear_model.LassoCV(cv=5).fit(X, Y)\n",
     "a_hat_lasso = lasso.coef_\n",
-    "a_hat_GS = solver.solve_linear_Gauss_Seidel(LHS=LHS, RHS=RHS, a=a)"
+    "a_hat_GS = solver.solve_linear_Gauss_Seidel(LHS=LHS, RHS=RHS, a=a)\n",
+    "a_hat_PCG = solver.PCG(LHS=LHS, RHS=RHS, x0=a_hat_Chol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Solver MSE 0.003973927632689106\n",
-      "Cholesky decomposition MSE 0.005617929456176031\n",
-      "Lasso MSE 0.004472849620160341\n",
-      "Gauss-Seidel MSE 0.005320952082784622\n"
+      "Linear Solver MSE 0.002898852348773677\n",
+      "Cholesky decomposition MSE 0.006136892642309588\n",
+      "Lasso MSE 0.0039223998211224\n",
+      "Gauss-Seidel MSE 0.0053746897385925085\n",
+      "PCG MSE 0.0028988427226561255\n"
      ]
     }
    ],
@@ -91,7 +93,8 @@
     "print(\"Linear Solver MSE\", np.sum((a_hat-a)**2)/P)\n",
     "print(\"Cholesky decomposition MSE\", np.sum((a_hat_Chol-a)**2)/P)\n",
     "print(\"Lasso MSE\", np.sum((a_hat_lasso-a)**2)/P)\n",
-    "print(\"Gauss-Seidel MSE\", np.sum((a_hat_GS-a)**2)/P)"
+    "print(\"Gauss-Seidel MSE\", np.sum((a_hat_GS-a)**2)/P)\n",
+    "print(\"PCG MSE\", np.sum((a_hat_PCG-a)**2)/P)"
    ]
   },
   {
@@ -104,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.10 ('base')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -118,12 +121,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e692904f94da4d2f44bcba1318c49c3c4aebd315db3c36ee38588e2708dde7b8"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
